fixed boxes on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,6 @@
+.features.fea-primary.articles {
+margin-bottom: 3%;
+}
 
 .visionsection {
   margin-top: 5%;
